Prepare release of v1.0.0

--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="action_sort_by_genre"> Sort by genre</string>
     <string name="action_sort_by_year"> Sort by year</string>
     <string name="bullet_symbol">\u2022</string>
+    <string name="new_movie">New movie</string>
+    <string name="name">Name</string>
+    <string name="year">Year</string>
+    <string name="genre">Genre</string>
 </resources>
